# ecmascript-legacy

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  package.json
src/: lexer.h  lexer_unittest.cpp  main.cpp  parser.h
tools/cmake/: SetCXXSupport.cmake  Testing.cmake
tools/npm/: build.js  print_ast.js
